Page height fixed overflow hidden locations now fit clean

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   color: black;
 
   height: 100vmin;
+  overflow: hidden;
 
   font-family: 'Lato', sans-serif;
   font-size: 1.1rem;
