--- a/src/components/navBar/ContactUs.css
+++ b/src/components/navBar/ContactUs.css
@@ -1,17 +1,48 @@
-.contact-us-wrapper {
-    height: 97.3vim;
+.location-wrapper {
 
-    margin-top: 60px;
-}
-
-.south-city-para {
     display: flex;
     flex-direction: column;
+    
+    width: fit-content;
 
-    font-size: 1rem;
+    margin-left: 35%;
+    margin-top: 70px;
+
+    /* border:1px solid red; */
 }
 
-.location {
+.city-wrapper {
+    border: 1px solid #0a161d63;
+    border-radius: 7px;
+    background-color: #ececec;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+
+    height: inherit;
+    width: 538px;
+
+    padding: 10px;
+    margin-left: 5px;
+}
+
+.location-para {
+    /* border: 1px solid red; */
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    width: 275px;
+
+    font-size: 1rem;
+
+    margin: 5px;   
+}
+
+.map-wrapper {
     /* border: 1px solid red; */
 
     display: flex;
@@ -19,10 +50,17 @@
 
 }
 
-.map-location {
+.map-wrapper {
     /* border: 1px solid blue; */
 
     align-self: center;
     
     margin-top: 15px;
+}
+
+.map-location {
+    /* border: 1px solid blue; */
+
+    height: inherit;
+    width: 150px;
 }
